added different machine benchmark

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,6 @@ curate_real_training_data/output/*
 benchmark_simulators_similarity/BEELINE-data/* 
 benchmark_simulators_similarity/BoolODE/* 
 benchmark_simulators_similarity/output/* 
+
+benchmark_training_time_machine/input/* 
+benchmark_training_time_machine/output/* 
